--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "check-ping",
+  "name": "check-ping-gg",
   "version": "1.0.0",
   "description": "Package for check ping",
   "main": "index.js",
