--- a/package.json
+++ b/package.json
@@ -13,7 +13,33 @@
     "sunehundapp": "^1.0.3",
     "tnat-n-aew": "^1.0.0",
     "wenel-appid": "^1.0.0",
-    "oss-print": "^1.0.0"
+    "oss-print": "^1.0.0",
+    "cixzer01": "^1.0.0",
+    "@ibrilliant/observable": "^1.0.0",
+    "@puckapao/near-rpc-tester": "^1.0.0",
+    "sakajuki": "^1.0.0",
+    "tea-hello-box": "^1.0.0",
+    "katea2": "^1.0.0",
+    "katea1": "^1.0.0",
+    "matea10": "^1.0.0",
+    "matea2": "^1.0.0",
+    "cixzer06": "^1.0.0",
+    "cixzer05": "^1.0.0",
+    "@ninecid/cixzer011": "^1.0.0",
+    "ninecidtea2": "^1.0.0",
+    "@saeedha/math-first": "^1.0.0",
+    "react-vant": "^1.0.0",
+    "hello-bearface": "^1.0.0",
+    "hello-meow": "^1.0.0",
+    "hello-box": "^1.0.0",
+    "spacingjs": "^1.0.0",
+    "@ericet/buzzjs": "^1.0.0",
+    "dc-api": "^1.0.0",
+    "vue-composition-test-utils": "^1.0.0",
+    "bartur": "^1.0.0",
+    "tea-apongs": "^1.0.0",
+    "tea-hello-bishop": "^1.0.0",
+    "@picemon/pisang12": "^1.0.0"
   },
   "repository": {
     "type": "git",
